--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .custom-navbar  {
-  background-color: #282c34; /* Change this to your desired color */
+  background-color: transparent; /* Change this to your desired color */
 }
 
 #dropdown-basic {
