--- a/src/simulator/ToolboxItemComponent.css
+++ b/src/simulator/ToolboxItemComponent.css
@@ -37,3 +37,16 @@
     width: 50px;
     height: 50px;
 }
+
+.icon-container {
+    position: fixed;
+    right: 0;
+    top: 0px;
+    padding: 10px;
+}
+
+.icon-container .icon {
+    color: white;
+    cursor: pointer;
+    margin: 10px;
+}
